--- a/client/src/app/components/champion-splash/champion-splash.component.html
+++ b/client/src/app/components/champion-splash/champion-splash.component.html
@@ -1,3 +1,3 @@
-<img
+<img [hidden]="!name" 
     src="https://ddragon.leagueoflegends.com/cdn/img/champion/splash/{{name?.replace(' ','').replace('\'','')}}_0.jpg"
     class="champion-splash">
