--- a/client/src/app/landing/landing.page.html
+++ b/client/src/app/landing/landing.page.html
@@ -5,8 +5,7 @@
       <ion-grid>
         <ion-row>
           <ion-col>
-            <img
-              [src]="'http://ddragon.leagueoflegends.com/cdn/11.13.1/img/profileicon/'+ summoner?.profileIcon + '.png'">
+            <app-profile-icon [icon]="summoner?.profileIcon"></app-profile-icon>
           </ion-col>
           <ion-col>
             <h3>{{summoner?.name}}</h3>
