--- a/client/src/app/profile/profile.page.html
+++ b/client/src/app/profile/profile.page.html
@@ -1,7 +1,7 @@
 <ion-content>
 <div class="container">
   <img class="flag" src="./assets/flags/{{flag}}.png">
-  <img class="icon" src="https://ddragon.leagueoflegends.com/cdn/11.13.1/img/profileicon/{{summoner?.profileIcon}}.png">
+  <app-profile-icon isProfile ="true" [icon]="summoner?.profileIcon"></app-profile-icon>
   <span class="lvl">{{summoner?.summonerLevel}}</span>
 </div>
 <ion-item class="update">
