--- a/client/src/app/components/profile-short/profile-short.component.html
+++ b/client/src/app/components/profile-short/profile-short.component.html
@@ -1,6 +1,6 @@
 <ion-row>
   <ion-col size="2">
-    <img src="https://ddragon.leagueoflegends.com/cdn/11.13.1/img/champion/{{player?.champion?.get('name').replace(' ','').replace('\'','')}}.png" class="game-icon">
+    <app-champion-icon [name]="player?.champion?.get('name')"></app-champion-icon>
   </ion-col>
   <ion-col size="1" class="game-center">
     
