--- a/client/src/app/components/report-item/report-item.component.html
+++ b/client/src/app/components/report-item/report-item.component.html
@@ -1,7 +1,7 @@
 <ion-grid class="report ion-margin-bottom">
   <ion-row>
     <ion-col size="2">
-      <img src="https://ddragon.leagueoflegends.com/cdn/11.13.1/img/champion/{{report?.get('champion').get('name')}}.png" class="game-icon">
+      <app-champion-icon [name]="report?.get('champion')"></app-champion-icon>
     </ion-col>
     <ion-col>
       <ion-icon *ngIf="report?.get('pro')" src="../assets/icon/trophy.svg" size="large" class="ion-padding"></ion-icon>
