--- a/client/src/app/termns/termns.page.html
+++ b/client/src/app/termns/termns.page.html
@@ -1,5 +1,5 @@
 <ion-content class="ion-padding">
-  <div class="center-div">
+  <div [hidden]="isLoading" class="center-div">
     <h1 class="ion-text-center">{{"termns.title" | translate}}</h1>
     <p class="text-long">{{"termns.content1" | translate}}</p>
     <p>{{"termns.content2" | translate}}</p>
@@ -50,4 +50,5 @@
         translate}}</button>
     </ion-item>
   </div>
+  <ion-spinner name="circles" [hidden]="!isLoading" class="centered"></ion-spinner>
 </ion-content>
